tests/negative/traits/mismatch-return-type.orng
trait My_Trait {
    fn f(self) -> Int
}

impl My_Trait for Int {
    fn f(self) -> () {}
}

fn main() -> Int {
    4
}